--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.2.4",
-		"twig/twig": "~1.0"
+		"twig/twig": "~1.0",
+        "doctrine/orm": "2.6.*@dev"
 	},
 	"require-dev": {
 		"mikey179/vfsStream": "1.1.*"
